--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		 <div class="container">
       <div class="card-white" id="introduction">
       	<h1> Hello, I'm Emma </h1>
-		<img src="images/profile.png" class="img-circle" width="100px" alt="Louanne Massaro">
+		<img src="images/profile.png" class="img-circle" width="100px" alt="Emma Mercelot">
 		<p> 
 		I am a student at IÉSEG, and I have a passion for makeup, fashion and luxury. My favorite clothing store is SevenRoses in Lille. Here is its link below I am also actively involved in sports, particularly tennis and athletics. In my free time, I enjoy going out, having fun, and partying.
 		</p>
